# Portfolio-Management-ML

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: Portfolio_Management_ML.ipynb
src/: __init__.py  arima_trading.py  backtesting.py  data_collection.py  nlp_sentiment.py  portfolio_optimizer.py  visualization.py
tests/: test_smoke.py
