[project]
name = "portfolio-management-ml"
version = "0.1.0"
description = "Portfolio management research pipeline combining rolling ARIMA trade timing, VADER news sentiment signals, and Markowitz / ML-enhanced portfolio optimisation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Prakash Kantamani" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pmdarima>=2.0.4",
    "vaderSentiment>=3.3.2",
    "plotly>=5.18.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.9.0",
    "cvxpy>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
